<resources>
    <string name="app_name">Tourist Guide</string>

    <!--Tab array-->
    <array name="tab_name">
        <item>Home</item>
        <item>Share</item>
        <item>Profile</item>
    </array>

    <string name="nearByPlacesText">Near By Places</string>
    <string name="near_by_restaurant">Near By Restaurant</string>
    <string name="near_by_hotels">Near By Hotels</string>
    <string name="about">About</string>
    <string name="timing">Timing</string>
    <string name="tickets">Tickets</string>
    <string name="near_by_places">Near by Places</string>
    <string name="how_to_reach">How to reach</string>
    <string name="review_title">Reviews</string>

    <!--Scan Image fragment buttons name-->
    <string name="gallery">GALLERY</string>
    <string name="camera">CAMERA</string>

    <!--profile fragment -->
    <!--firebase auth-->
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password, network connection or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not registered. Signup Here!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="welcome_traveller">Welcome traveller!</string>
    <string name="to_see_your_review_and_comments_login">Login to explore your views</string>
    <string name="welcome_user">Welcome User!</string>
    <string name="username">Username</string>
    <string name="logout">Logout</string>
    <string name="edit_profile">Update Profile</string>
    <string name="edit">edit</string>
    <string name="delete_account">Delete Account</string>
    <string name="user_id">User Id</string>
    <string name="comment">Comment</string>
    <string name="comment_here">Comment here!!!</string>
    <string name="add_review_here">Add review here</string>

</resources>
