<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="@dimen/_16sdp"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <ImageView
            android:id="@+id/editbtn"
            android:layout_width="@dimen/_18sdp"
            android:layout_height="@dimen/_18sdp"
            android:background="@drawable/ic_edit_black"
            android:layout_gravity="end"
            android:textAllCaps="false"
            android:textColor="@color/colorDark" />

        <ImageView
            android:id="@+id/profilepic"
            android:layout_width="@dimen/_70sdp"
            android:layout_height="@dimen/_70sdp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/_10sdp"
            android:src="@drawable/user" />

        <TextView
            android:id="@+id/traveller"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_16sdp"
            android:layout_gravity="center_horizontal"
            android:text="@string/welcome_traveller"
            android:textAllCaps="false"
            android:textColor="@color/colorDark"
            android:textStyle="bold"
            android:textSize="@dimen/_16sdp" />

        <TextView
            android:id="@+id/resetpasswordguidetext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_16sdp"
            android:gravity="center_horizontal"
            android:padding="16dp"
            android:text="@string/forgot_password_msg"
            android:textColor="@color/colorDark"
            android:textSize="@dimen/_14sdp" />

        <EditText
            android:id="@+id/loginemail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorDark"
            android:textSize="@dimen/_12sdp"
            android:textColorHint="@color/colorDark" />

        <EditText
            android:id="@+id/loginpassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:textSize="@dimen/_12sdp"
            android:textColor="@color/colorDark"
            android:textColorHint="@color/colorDark" />

        <EditText
            android:id="@+id/resetpasswordemail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:textSize="@dimen/_12sdp"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorDark"
            android:textColorHint="@color/colorDark" />

        <EditText
            android:id="@+id/registerusername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:textSize="@dimen/_12sdp"
            android:maxLength="20"
            android:inputType="textPersonName|textNoSuggestions"
            android:importantForAutofill="no"
            android:textColor="@color/colorDark" />

        <EditText
            android:id="@+id/registeremail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textSize="@dimen/_12sdp"
            android:inputType="textEmailAddress|textNoSuggestions"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/colorDark" />

        <EditText
            android:id="@+id/registerpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:hint="@string/hint_password"
            android:textSize="@dimen/_12sdp"
            android:maxLength="20"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:textColor="@color/colorDark" />

        <EditText
            android:id="@+id/userusername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:textSize="@dimen/_12sdp"
            android:inputType="textPersonName"
            android:maxLength="20"
            android:importantForAutofill="no"
            android:textColor="@color/colorDark" />

        <EditText
            android:id="@+id/useremail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textSize="@dimen/_12sdp"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/colorDark" />


        <Button
            android:id="@+id/updateprofilebtn"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginTop="16dp"
            android:textSize="@dimen/_14sdp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/edit_profile"
            android:textColor="@color/colorDark"
            android:textStyle="bold" />

        <Button
            android:id="@+id/removeAccountbtn"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/delete_account"
            android:textSize="@dimen/_14sdp"
            android:textColor="@color/colorDark"
            android:textStyle="bold" />

        <Button
            android:id="@+id/registerbtn"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/action_sign_in_short"
            android:textSize="@dimen/_14sdp"
            android:textColor="@color/colorDark"
            android:textStyle="bold" />

        <Button
            android:id="@+id/loginbtn"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/btn_login"
            android:textSize="@dimen/_14sdp"
            android:textColor="@color/colorDark" />

        <Button
            android:id="@+id/resetpasswordbtn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/btn_reset_password"
            android:textSize="@dimen/_14sdp"
            android:textColor="@color/colorDark" />

        <TextView
            android:id="@+id/forgetpasswordbtn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="@null"
            android:text="@string/btn_forgot_password"
            android:textAllCaps="false"
            android:gravity="center_horizontal"
            android:textSize="@dimen/_12sdp"
            android:textColor="@color/colorDark" />

        <TextView
            android:id="@+id/logoutbtn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="@null"
            android:text="@string/logout"
            android:textAllCaps="false"
            android:gravity="center_horizontal"
            android:textStyle="bold"
            android:textColor="@color/colorDark"
            android:textSize="@dimen/_14sdp" />

        <TextView
            android:id="@+id/notregisteredbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="@null"
            android:text="@string/btn_link_to_register"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/colorDark"
            android:textSize="@dimen/_14sdp" />

        <TextView
            android:id="@+id/alreadyregisteredbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="@null"
            android:text="@string/btn_link_to_login"
            android:textAllCaps="false"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/colorDark"
            android:textStyle="bold"
            android:textSize="@dimen/_14sdp" />

        <TextView
            android:id="@+id/guide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:text="@string/to_see_your_review_and_comments_login"
            android:textAllCaps="false"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/colorDark"
            android:textStyle="bold"
            android:textSize="@dimen/_16sdp" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_centerInParent="true"
        android:visibility="gone" />
</RelativeLayout>
